--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.6.0",
-    "firebase-admin": "^13.2.0",
+    "firebase": "^11.7.3",
+    "firebase-admin": "^13.4.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.6",
     "react-dom": "^19.0.0",
