--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto": "^1.0.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
